# python-projects

./: pyproject.toml
exercises/: factorial.py  hexToDecimal.py
my-utilis/math-operations/: factorial.py
python-for-ai/: .env
python-for-ai/pandas/: read-write-tabular-data.py
python-for-ai/sales-analysis/: analyzer.py  helpers.py
python-for-ai/sales-analysis/output/: sales_data.xlsx
python-for-ai/tutorial/basics/: interactive_demo.py  variables.py
python-for-ai/tutorial/basics/classes/: classes.py  inheritance.py  methods.py
python-for-ai/tutorial/basics/control-flow/: control-flow.py  if-statements.py  loops.py
python-for-ai/tutorial/basics/data-structures/: data-structures-dictionaries.py  data-structures-lists.py  data-structures-sets.py  data-structures-tuples.py
python-for-ai/tutorial/basics/working-with-data/: operators.py  string-manipulation.py
python-for-ai/tutorial/building-programs/external-tools/: api.py  import.py  working-with-data.py
python-for-ai/tutorial/building-programs/external-tools/data/: borsa_weather.csv  paris_weather.csv
python-for-ai/tutorial/building-programs/functions/: functions.py  parameters.py  return-values.py
python-for-ai/tutorial/tools/: api-example.py
python-levels/2-intermediate-python/: map-function.py  optional-parameters.py  static-and-class-methods.py
python-w3-course/1-beginner/: comments.py  data-types.py  input.py  operators.py  print.py  variables.py
